fixed spacing and colors on the markdown code blocks

--- a/src/app.css
+++ b/src/app.css
@@ -136,11 +136,23 @@ body {
 	}
 
 	code {
-		background: var(--lightblack);
+		background: var(--black);
 		color: var(--white);
 	}
 
 	code.code {
 		background: var(--blacker);
+	}
+
+	pre code.language-js,
+	pre code.language-javascript {
+		background-color: var(--blackest); /* Light background */
+		color: var(--off-white); /* Your desired text color */
+	}
+
+	/* Target code blocks for CSS */
+	pre code.language-css {
+		background-color: var(--blackest); /* Light green background */
+		color: var(--off-white); /* Your desired text color */
 	}
 }
